@@ -15,8 +15,12 @@ reportbug (4.12.3) UNRELEASED; urgency=low
       Matej Zary for the report; Closes: #574843
   * checks/compare_pseudo-pkgs_lists.py
     - make it work again, with a dirty trick (import 'utils' before 'debianbts')
+  * reportbug/debianbts.py
+    - removed some (commented) cruft for pseudo-packages list
+    - added 'debian-maintainers' and 'snapshot.debian.org' to the
+      pseudo-packages list
 
- -- Sandro Tosi <morph@debian.org>  Mon, 07 Jun 2010 20:34:44 +0200
+ -- Sandro Tosi <morph@debian.org>  Mon, 07 Jun 2010 20:41:04 +0200
 
 reportbug (4.12.2) unstable; urgency=low
 
